--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <div class="container">
         <h1>Keyboard Layout Customizer</h1>
         <div id="keyboard"></div>
+        <div id="error-message" class="error"></div>
         <button id="generateButton">Generate Custom Bindings</button>
+        <button id="loadConfigButton">Load Config from URL</button>
         <textarea id="output" rows="10" cols="50" readonly></textarea>
     </div>
     <script src="script.js"></script>
