--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@
         <h1>Keyboard Layout Customizer</h1>
         <div id="keyboard"></div>
         <div id="error-message" class="error"></div>
-        <button id="generateButton">Generate Custom Bindings</button>
-        <button id="loadConfigButton">Load Config from URL</button>
+        <div class="button-group">
+            <button id="generateButton">Generate Custom Bindings</button>
+            <button id="loadConfigButton">Load Config from URL</button>
+            <button id="resetButton">Reset</button>
+            <button id="downloadButton">Download Config</button>
+            <button id="toggleDarkMode">Toggle Dark Mode</button>
+        </div>
         <textarea id="output" rows="10" cols="50" readonly></textarea>
     </div>
     <script src="script.js"></script>
 </body>
 </html>
+
