--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
 <body>
     <div class="container">
         <h1>Keyboard Layout Customizer</h1>
-        <p>
+        <p class="prevent-select">
             <input type="radio" id="setBindings" name="input_mode" checked>
             <label for="setBindings">Set Bindings</label>
-            
             <input type="radio" id="setColors" name="input_mode">
             <label for="setColors">Set Colors</label>
-            <input type="color" id="currentColor" value="#00eeff">
+            <input type="color" id="currentColor" value="#ddeeff">
             <input type="checkbox" id="toggleDarkMode">
             <label for="toggleDarkMode">Dark Mode</label>
         </p>
