right click to pick color

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <input type="checkbox" id="toggleDarkMode">
             <label for="toggleDarkMode">Dark Mode</label>
         </p>
-        <div id="keyboard"></div>
+        <div id="keyboard" oncontextmenu="return false;"></div>
         <div class="button-group">
             <button id="resetButton">Reset</button>
             <button id="loadConfigButton">Load Config from URL</button>
